feat: start style feed component

--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.11.60",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "5",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
